--- a/Exercícios/HTML5/ex4.html
+++ b/Exercícios/HTML5/ex4.html
@@ -10,38 +10,87 @@
 
     <link rel="icon" href="assets/img/a.png">
     <!-- Exemplo de css interno -->
-
+    <!-- organizar os seletores dos mais amplos para os mais específicos -->
     <style>
-        body{
+        *{ /* Seletor universal */
+            box-sizing: border-box; /* Tamanho da caixa: significa que o padding não vai
+            pra fora dos elementos, muito importante colocar isso no css. Para compensar o padding  */
             margin: 0;
+            padding: 0;
         }
         header {
             background-color: black;
             color: white;
-            width: 100%;
-            height: 65px;
+            width: 600px;
+            height: 100px;
         }
-        nav{
+
+        nav {
             background-color: #80808057;
-            width: auto;
-            height: 22px;
+            width: 600px;
+            height: 80px;
+        }
+
+        main {
+            background-color: #f1247912;
+            width: 600px;
+            height: 420px;
+        }
+
+        article {
+            background-color: #00d0ff36;
+            width: 400px;
+            height: 420px;
+            float: left;
+        }
+
+        /* Flutua para a parte esquerda do elemento*/
+
+        section {
+            background-color: black;
+            width: 350px;
+            height: 200px;
+            margin-left: 20px;
+        }
+
+        aside {
+            background-color: #e499d09c;
+            width: 200px;
+            height: 420px;
+            float: right;
+            /* Flutua para a parte direita do elemento*/
+        }
+
+        footer {
+            color: white;
+            height: 100px;
+            background-color: black;
+            padding-top: 10px;
+            padding-left: 10px;
+        }
+
+        #caixa {
+            width: 600px;
+            height: 700px;
+            margin: 0 auto; /* o 0 Serve para colocar uma margin 0 para ambos os lados de cima e baixo, e auto serve para os lados left e right */
         }
     </style>
 </head>
 
 <body>
     <!------------------ Estruturas semânticas (são importantes por causa da google)--------------------->
-    <header>Header</header>
-    <nav>Navigation</nav>
-    <main>
-        <article>
-            <section>Section dentro do article</section>
-            <section>Section dentro do article</section>
-        </article>
-        <aside>Aside</aside>
-    </main>
-    <footer>Footer</footer>
-
+    <div id="caixa">
+        <header>Header</header>
+        <nav>Navigation</nav>
+        <main>
+            <article>
+                <section style="margin-top: 10px;">Section dentro do article</section>
+                <section>Section dentro do article</section>
+            </article>
+            <aside>Aside</aside>
+        </main>
+        <footer>Footer</footer>
+    </div>
 </body>
 
 </html>
