Modifiquei com Bootstrap

--- a/Exercícios/HTML-20-02-20/ex2.html
+++ b/Exercícios/HTML-20-02-20/ex2.html
@@ -8,6 +8,8 @@
     <title>Lista de opções</title>
     <link rel="icon" href="assets/img/iconfinder_tree-green-nature-square_1_3199223.png">
     <link rel="stylesheet" href="assets/css/estilo2.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
@@ -20,16 +22,18 @@
         <nav>
             <!-- ul>li*4 -->
             <ul id="menu">
-                <li class="item"><a href="#">Home</a ><li>
-                <li class="item"><a href="#imagens">Imagens </a><li>
+                <li class="item"><a href="#">Home</a>
+                <li>
+                <li class="item"><a href="#imagens">Imagens </a>
+                <li>
                 <li class="item"><a href="#informacoes-adicionais">Informações adicional</a></li>
-                <li class="item"><a href="#rodape">Rodapé</a><li>
+                <li class="item"><a href="#rodape">Rodapé</a>
+                <li>
             </ul>
         </nav>
         <main>
             <section id="other-items">
-                <h1>Outros items</h1>
-                <div class="tresimagens">
+                <!-- <div class="tresimagens">
                     <img src="assets/img/fossil.png" alt="">
                 </div>
                 <div class="tresimagens">
@@ -37,14 +41,40 @@
                 </div>
                 <div class="tresimagens">
                     <img src="assets/img/cabeca.png" alt="">
+                </div> -->
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/fossil.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Exposição de ovos</h5>
+                        <p class="card-text">Conheça os locais onde estão dísponiveis ovos de dinossauros.</p>
+                        <a href="#" class="btn btn-primary">Continuar</a>
+                    </div>
                 </div>
-            </section> 
-            <section id="imagens">Imagens</section>
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/dinosaur.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Exposições de fósseis</h5>
+                        <p class="card-text">Veja espécies fossilizadas em diferentes locais.</p>
+                        <a href="#" class="btn btn-primary">Continuar</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/braquiossauro.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Espécies</h5>
+                        <p class="card-text">Saiba quais foram as espécies encontradas até hoje.</p>
+                        <a href="#" class="btn btn-primary">Continuar</a>
+                    </div>
+                </div>
+            </section>
+            <section id="imagens">
+
+            </section>
             <section id="informacoes-adicionais">Informações adicionais</section id="imagens">
         </main>
         <footer id="rodape">
             <div id="image">
-                <a href=""><img src="assets/img/dinosauro.png" alt=""></a>
+                <a href=""><img src="assets/img/iconseta.png" alt=""></a>
             </div>
         </footer>
     </div>
