--- a/Exercícios/HTML-20-02-20/ex3.html
+++ b/Exercícios/HTML-20-02-20/ex3.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Usando Bootstrap</title>
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../BOOTSTRAP/css/bootstrap.css">
     <style>
         /* .vick{
             font-size: 2em;
@@ -17,6 +17,6 @@
     <div class="alert alert-success vick" role="alert">
         <p>Testando bootstrap</p>
       </div>
-    <script src="../../bootstrap/js/bootstrap.js"></script>
+    <script src="../BOOTSTRAP/js/bootstrap.js"></script>
 </body>
 </html>
