Consegui mais ou menos

--- a/Exercícios/ex23.html
+++ b/Exercícios/ex23.html
@@ -6,10 +6,11 @@
         for (var j = 0; j <= 2; j++) {
             a[i, j] = parseInt(prompt("Digite um número a:"));
             // b[i, j] = parseInt(prompt("Digite um número b:"));
-            document.write(`O valor de a é ${a[i, j]}`);
+            document.write(`O valor de a é ${a[i, j]}<br>`);
             // document.write(`<br>O valor de b é ${b[i, j]}`);
         }
     }
-    soma = a[0,0] + a[2]
+    soma = a[0,0] + a[1,0] + a[2,0];
+    document.write("A soma é:" + a[i ,j])
     
 </script>
