Exercícios de função

--- a/Atividade/Funcoes/ExercisesFuncoes/substring.html
+++ b/Atividade/Funcoes/ExercisesFuncoes/substring.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="assets/css/substring.css">
 </head>
 <body>
-    <h1>Vamos usar substring!</h1>
+    <h1>Vamos usar varias funções!</h1><br>
+    <br>
+    <br>
+    <br>
     <div id="caixa">
-        <h3>Número que você digitou: </h3>
-        <p id="digitado"></p>
+        <section>
+            <h3 id="resultado">O resultado... </h3><br>
+            <p id="digitado"></p>
+        </section>
     </div>
     <script src="assets/js/substring.js"></script>
 </body>
