Exercício 7 feito - funções

--- a/Atividade/Funcoes/ExercisesFuncoes/substring.html
+++ b/Atividade/Funcoes/ExercisesFuncoes/substring.html
@@ -14,10 +14,46 @@
     <br>
     <div id="caixa">
         <section>
+            <h3 id="resultado1">O resultado... </h3><br>
+            <p id="digitado1"></p>
+            <button onclick="ex1()">Clique</button>
+        </section>
+        <section>
+            <h3 id="resultado2">O resultado... </h3><br>
+            <p id="digitado2"></p>
+            <button class="botao2" onclick="ex2()">Clique</button>
+        </section>
+        <section>
+            <h3 id="resultado4">O resultado... </h3><br>
+            <p id="digitado4"></p>
+            <button class="botao4" onclick="ex4()">Clique</button>
+        </section>
+        <section>
+            <h3 id="resultado5">O resultado... </h3><br>
+            <p id="digitado5"></p>
+            <button class="botao5" onclick="ex5()">Clique</button>
+        </section>
+        <section>
+            <h3 id="resultado6">O resultado... </h3><br>
+            <p id="digitado6"></p>
+            <button class="botao6" onclick="ex6()">Clique</button>
+        </section>
+        <section>
+            <h3 id="resultado7">O resultado... </h3><br>
+            <p id="digitado7"></p>
+            <button class="botao7" onclick="ex7()">Clique</button>
+        </section>
+        <section>
             <h3 id="resultado">O resultado... </h3><br>
             <p id="digitado"></p>
+            <button class="botao8" onclick="ex8()">Clique</button>
         </section>
     </div>
-    <script src="assets/js/substring.js"></script>
+    <script src="assets/js/1-InverterNumeros.js"></script>
+    <script src="assets/js/2-Palindrome.js"></script>
+    <script src="assets/js/4-sort.js"></script>
+    <script src="assets/js/5-Letra-Maiuscula.js"></script>
+    <script src="assets/js/6-MaiorPalavra.js"></script>
+    <script src="assets/js/7-Vogal.js"></script>
 </body>
 </html>
