--- a/JavaScript/ex3.html
+++ b/JavaScript/ex3.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript - lógica</title> <!-- 04/04/2020 Wednesday -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
         * {
             box-sizing: border-box;
@@ -23,6 +24,17 @@
             align-items: center;
         }
 
+        .list-group-item {
+            background-color: #ffe877;
+            border-bottom: 1px solid #909090;
+        }
+
+        .divbotao {
+            display: flex;
+            justify-content: space-around;
+            padding: 3rem;
+        }
+
         #caixa {
             margin: 0 auto;
             width: 37%;
@@ -37,10 +49,18 @@
     <div id="caixa"><br><br>
         <h1>Monte sua lista</h1><br><br>
         <div class="input-group mb-3 inputs">
-            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2" id="nome">
-            <input type="button" class="btn btn-outline-secondary" value="Click here!" id="botao">
+            <input type="text" class="form-control" placeholder="Coloque um item..." aria-label="Recipient's username"
+                aria-describedby="button-addon2" id="nome">
+            <input type="button" class="btn btn-outline-secondary" value="Adicionar" id="botao">
         </div>
-        <div class="texto"></div>
+        <div class="texto">
+            <ul class="list-group"></ul>
+        </div>
+        <div class="divbotao">
+            <button type="button" id="botaoFecha" class="btn btn-outline-danger">Excluir</button>
+            <button type="button" id="guarda" class="btn btn-outline-success">Guardar</button>
+        </div>
+        <div id="box"></div>
     </div>
 
     <script>
@@ -49,11 +69,14 @@
             var nome;
             document.getElementById("botao").addEventListener('click', function () {
                 nome = document.getElementById('nome').value;
-                var li = document.createElement('li');
-                var div = document.querySelector('.texto');
-                li.className = nome;
-                li.appendChild(document.createTextNode(`${li.className}`))
-                div.appendChild(li);
+                var li = document.createElement('li')
+                var ul = document.querySelector('.list-group');
+                li.setAttribute("class", "list-group-item");// dá uma classe para o elemento
+                li.appendChild(document.createTextNode(`${nome}`))
+                ul.appendChild(li);
+                li.split(" ");
+                alert(li)
+
             });
             //debugger //programa que marca um breakpoint no console - Para encontrar erro
             // Muda a cor do texto quando passar o mouser
@@ -64,14 +87,34 @@
             document.getElementById('botao').addEventListener('mouseout', function () {
                 document.getElementById('nome').style = 'black';
             })
+            document.getElementById('botaoFecha').addEventListener('click', function () {
+                nome = document.getElementById('nome').value;
+                var ul = document.querySelector('.list-group');
+                ul.innerHTML = ''
+            })
+            document.getElementById('guarda').addEventListener('click', function () {
+                nome = document.getElementById('nome').value;
+                var ul = document.querySelector('.list-group');
+                var lis = document.querySelector(".list-group-item")
+                var div = document.querySelector("#box")
+                var liclas = document.querySelector('.list-group-item');
+                div.appendChild(document.createTextNode(`${lis}`))
+
+            })
         } catch (erro) {
             alert(`Deu ruim!\n${erro}`)
         }
 
     </script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
