Exercícios de lógica 05/03/2020

--- a/JavaScript/Javascript-Exercicios/Exercícios-Lógica/vick.html
+++ b/JavaScript/Javascript-Exercicios/Exercícios-Lógica/vick.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-light bg-dark">
             <a class="navbar-brand">Navbar</a>
             <ul class="nav navbar-nav">
-                <li><a href="index.html" class="navbar-link">Introdução ao JavaScript</a></li>
+                <li><a href="vick.html" class="navbar-link">Introdução ao JavaScript</a></li>
                 <li><a href="logica-simples.html" class="navbar-link">Lógica simples com JS</a></li>
                 <li><a href="logica-dificil.html" class="navbar-link">Lógica complexa com JS</a></li>
             </ul>
@@ -64,7 +64,7 @@
                 <hr>
                 <div id="popup">
                     <button onclick="abrePopUp()">Abrir pop-up</button>
-                    <button onclick="">Fechar pop-up</button>
+                    <button onclick="fechaPopUp()">Fechar pop-up</button>
                 </div>
                 <hr>
               </div>
@@ -80,7 +80,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-        <script src="../Exercíciovick/js/myvick.js"></script>
+    <script src="../Exercícios-Lógica/js/myvick.js"></script>
 
 </body>
 
